enemic chicken logic bases

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -113,7 +113,8 @@
     <Compile Include="Assets\_Course Library\Scripts\Actions\LaunchProjectile.cs" />
     <Compile Include="Assets\_Course Library\Scripts\Conditions\OnVelocity.cs" />
     <Compile Include="Assets\_Course Library\Scripts\Actions\DestroyObject.cs" />
-    <Compile Include="Assets\ChickenScript.cs" />
+    <Compile Include="Assets\Assets\Chicken\ChickenScript.cs" />
+    <Compile Include="Assets\Assets\Chicken\ChickenLogic.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
